plugins {
    id 'java'
}

group 'com.kousenit'
version '1.0'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

repositories {
    mavenCentral()
}

String junitVersion = '5.8.2'
String mockitoVersion = '4.4.0'
String assertJVersion = '3.22.0'
String wiremockversion = '2.33.0'

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'
    testImplementation "org.junit.jupiter:junit-jupiter:$junitVersion"
    testImplementation "org.junit.vintage:junit-vintage-engine:$junitVersion"
    // testImplementation "org.mockito:mockito-core:$mockitoVersion"
    testImplementation "org.mockito:mockito-inline:$mockitoVersion"
    testImplementation "org.mockito:mockito-junit-jupiter:$mockitoVersion"
    testImplementation "org.assertj:assertj-core:$assertJVersion"
    testImplementation "com.github.tomakehurst:wiremock-jre8:$wiremockversion"
}

tasks.withType(JavaCompile).configureEach {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
    maxParallelForks(4)
}